fixed icon image distortion in style.css

--- a/public/style.css
+++ b/public/style.css
@@ -54,8 +54,8 @@ form div {
     position: fixed;
     top: 0;
     right: 0;
-    max-width: 15%;
-    min-width: 12%;
+    max-width: 40%;
+    min-width: 40%;
     height: 100%;
     background: rgba(0, 0, 0, 0.04);
     padding: 8px;
@@ -129,8 +129,8 @@ form div {
     position: fixed;
     top: 0;
     right: 0;
-    max-width: 200px;
-    min-width: 200px;
+    max-width: 250px;
+    min-width: 250px;
     height: 100%;
     background: rgba(0, 0, 0, 0.04);
     padding: 8px;
@@ -154,12 +154,13 @@ form div {
 }
 
 .closetpics {
-  padding-bottom: 10px;
+  padding: 5px;
+  /* padding-bottom: 10px; */
   left: 0;
   bottom: 0;
-  width: 180px;
-  height: 180px;
-  border-radius: 50%;
+  max-width: 230px;
+  max-height: 230px;
+  */border-radius: 50%;
   align-items: center;
 }
 
